# mini-dns-relay

./: Cargo.toml  README.md  hosts.txt  report.md
src/: lib.rs  main.rs  packet.rs
