[package]
name = "mini-dns-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.9", features = ["derive"] }
tokio = { version = "1.29.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"